2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* Makefile.am: 
	* tests/Makefile.am: 
	* tests/wrapset.scm: 
	* tests/wrapset.api: Add API regression tests.

	* gnome/corba/Makefile.am: 
	* Makefile.am: 
	* doc/make-texinfo.scm: 
	* doc/guile-gnome-corba.texi: 
	* doc/guile-gnome-corba.scm: 
	* doc/Makefile.am: Add docs and infrastructure for generating
	docs. Pretty paltry right now, though.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-01  Andy Wingo  <wingo@pobox.com>

	* gnome/corba/guile-gnome-corba-types.c
	(scm_c_corba_demarshal_any): Add a cast to avoid a compiler
	warning.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* gnome/corba/guile-gnome-corba-generic.c
	(guile_corba_generic_make_type_name): Actually,
	gtype-name->class-name returns a symbol, as it turns out. Update
	to deal with that.
	
	* gnome/corba/guile-gnome-corba-generic.c
	(guile_corba_generic_make_type_name): Update for guile 1.8's
	string functions. Fixes part of #416570.

	* == Released guile-gnome-platform version 2.15.91 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/corba-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper. Use #:keywords, not :keywords.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==
