@@ -1,3 +1,11 @@
+2008-04-08  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/corba/guile-gnome-corba-types.c: Update for (gnome
+	gobject) API changes.
+
+	* gnome/corba/guile-gnome-corba-primitives.c: Only define
+	BONOBO_EX if it's not defined already.
+
 2007-12-10  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.96 ==
